@@ -875,6 +875,11 @@ operator|+
 name|getRelaxLocality
 argument_list|()
 operator|+
+literal|", Node Label Expression: "
+operator|+
+name|getNodeLabelExpression
+argument_list|()
+operator|+
 literal|"}"
 return|;
 block|}
